--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,399 @@
-
----
-
-## 📦 `requirements.txt`
-
-```txt
-Flask
-PyPDF2
-spacy
+absl-py==2.1.0
+affine==2.4.0
+aiohttp==3.9.5
+aiohttp-retry==2.8.3
+aiosignal==1.3.1
+albucore==0.0.23
+albumentations==2.0.5
+alembic==1.14.0
+altair==5.5.0
+annotated-types==0.7.0
+anyio==3.7.1
+appdirs==1.4.4
+argon2-cffi==23.1.0
+argon2-cffi-bindings==21.2.0
+arrow==1.3.0
+asttokens==2.4.1
+astunparse==1.6.3
+async-lru==2.0.4
+attrs==23.2.0
+Babel==2.14.0
+backoff==2.2.1
+beautifulsoup4==4.12.3
+bleach==6.1.0
+blinker==1.8.2
+blis==0.7.11
+boilerpy3==1.0.7
+bokeh==3.4.1
+boto3==1.35.39
+botocore==1.35.39
+cachetools==5.5.2
+catalogue==2.0.10
+catboost==1.2.5
+cattrs==24.1.1
+certifi==2023.11.17
+cffi==1.16.0
+charset-normalizer==3.3.2
+click==8.1.7
+click-plugins==1.1.1
+cligj==0.7.2
+cloudpathlib==0.19.0
+cloudpickle==3.0.0
+cmake==3.31.6
+colorama==0.4.6
+colorlog==6.9.0
+comm==0.2.1
+comtypes==1.4.10
+confection==0.1.5
+contourpy==1.2.0
+cryptography==43.0.1
+cycler==0.12.1
+cymem==2.0.8
+dash==3.0.3
+dask==2024.5.0
+datasets==3.0.0
+debugpy==1.8.0
+decorator==4.4.2
+deepface==0.0.93
+defusedxml==0.7.1
+dill==0.3.8
+distlib==0.3.8
+distro==1.9.0
+dnspython==2.6.1
+docopt==0.6.2
+docstring_parser==0.16
+elastic-transport==8.15.0
+elasticsearch==8.15.1
+en-core-web-sm @ https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.7.1/en_core_web_sm-3.7.1-py3-none-any.whl#sha256=86cc141f63942d4b2c5fcee06630fd6f904788d2f0ab005cce45aadb8fb73889
+et-xmlfile==1.1.0
+Events==0.5
+executing==2.0.1
+faiss-cpu==1.8.0.post1
+Faker==24.1.0
+fastapi==0.103.2
+fastjsonschema==2.19.1
+filelock==3.14.0
+fire==0.7.0
+Flask==3.0.3
+flask-cors==5.0.1
+flatbuffers==24.3.25
+fonttools==4.47.2
+fqdn==1.5.1
+frozenlist==1.4.1
+fsspec==2024.3.1
+gast==0.5.4
+gdown==5.2.0
+geopandas==1.0.1
+gitdb==4.0.12
+GitPython==3.1.44
+google-ai-generativelanguage==0.6.15
+google-api-core==2.24.2
+google-api-python-client==2.164.0
+google-auth==2.38.0
+google-auth-httplib2==0.2.0
+google-auth-oauthlib==1.2.1
+google-generativeai==0.8.4
+google-pasta==0.2.0
+googleapis-common-protos==1.69.2
+graphviz==0.20.3
+greenlet==3.1.0
+groq==0.11.0
+grpcio==1.71.0
+grpcio-status==1.71.0
+grpcio-tools==1.66.1
+gTTS==2.5.4
+gunicorn==23.0.0
+h11==0.14.0
+h2==4.1.0
+h5py==3.11.0
+hpack==4.0.0
+httpcore==0.18.0
+httplib2==0.22.0
+httpx==0.25.0
+huggingface-hub==0.29.3
+hyperframe==6.0.1
+idna==3.6
+imageio==2.37.0
+imageio-ffmpeg==0.6.0
+IMAPClient==3.0.1
+importlib_metadata==8.6.1
+inflect==7.4.0
+iniconfig==2.0.0
+instructor==1.7.9
+intel-openmp==2021.4.0
+ipykernel==6.29.0
+ipython==8.20.0
+ipywidgets==8.1.1
+isoduration==20.11.0
+itsdangerous==2.2.0
+jax==0.5.2
+jaxlib==0.5.1
+jedi==0.19.1
+Jinja2==3.1.6
+jiter==0.8.2
+jmespath==1.0.1
+joblib==1.4.2
+json5==0.9.14
+jsonpatch==1.33
+jsonpointer==2.4
+jsonschema==4.21.1
+jsonschema-specifications==2023.12.1
+jupyter==1.0.0
+jupyter-console==6.6.3
+jupyter-events==0.9.0
+jupyter-lsp==2.2.2
+jupyter_client==8.6.0
+jupyter_core==5.7.1
+jupyter_server==2.12.5
+jupyter_server_terminals==0.5.2
+jupyterlab==4.0.11
+jupyterlab-widgets==3.0.9
+jupyterlab_pygments==0.3.0
+jupyterlab_server==2.25.2
+keras==3.9.1
+kiwisolver==1.4.5
+langchain==0.3.23
+langchain-core==0.3.52
+langchain-groq==0.2.0
+langchain-text-splitters==0.3.8
+langcodes==3.4.0
+langsmith==0.3.31
+language_data==1.2.0
+lazy-imports==0.3.1
+libclang==18.1.1
+lightgbm==4.3.0
+locket==1.0.0
+lxml==5.3.0
+lz4==4.4.4
+Mako==1.3.6
+marisa-trie==1.2.0
+Markdown==3.6
+markdown-it-py==3.0.0
+MarkupSafe==2.1.4
+matplotlib==3.8.2
+matplotlib-inline==0.1.6
+mdurl==0.1.2
+mediapipe==0.10.21
+mistune==3.0.2
+mkl==2021.4.0
+ml_dtypes==0.5.1
+monotonic==1.6
+more-itertools==10.5.0
+MouseInfo==0.1.3
+moviepy==1.0.3
+mpmath==1.3.0
+msgpack==1.1.0
+mtcnn==1.0.0
+multidict==6.0.5
+multiprocess==0.70.16
+murmurhash==1.0.10
+mysql-connector-python==8.3.0
+namex==0.0.8
+narwhals==1.30.0
+nbclient==0.9.0
+nbconvert==7.14.2
+nbformat==5.9.2
+nest-asyncio==1.6.0
+networkx==3.3
+notebook==7.0.7
+notebook_shim==0.2.3
+num2words==0.5.13
+numpy==1.26.0
+oauthlib==3.2.2
+openai==1.73.0
+opencv-contrib-python==4.11.0.86
+opencv-python==4.11.0.86
+opencv-python-headless==4.11.0.86
+openpyxl==3.1.5
+opt-einsum==3.3.0
+optree==0.11.0
+optuna==4.1.0
+orjson==3.10.7
+osmium==4.0.2
+outcome==1.3.0.post0
+overrides==7.6.0
+packaging==23.2
+pandas==2.2.0
+pandocfilters==1.5.1
+parso==0.8.3
+partd==1.4.2
+patsy==0.5.6
+pdf2image==1.17.0
+pdfminer.six==20250327
+pdfplumber==0.11.6
+Pillow==10.0.1
+pinecone-client==5.0.1
+pinecone-plugin-inference==1.1.0
+pinecone-plugin-interface==0.0.7
+platformdirs==4.1.0
+plotly==5.22.0
+pluggy==1.5.0
+portalocker==2.10.1
+posthog==3.6.5
+preshed==3.0.9
+proglog==0.1.10
+prometheus-client==0.19.0
+prompt-toolkit==3.0.43
+prompthub-py==4.0.0
+proto-plus==1.26.1
+protobuf==4.25.6
+psutil==5.9.8
+psycopg2-binary==2.9.10
+pure-eval==0.2.2
+pyarrow==15.0.1
+pyasn1==0.6.1
+pyasn1_modules==0.4.1
+PyAudio==0.2.14
+PyAutoGUI==0.9.54
+pycparser==2.21
+pydantic==2.10.6
+pydantic-settings==2.0.3
+pydantic_core==2.27.2
+pydeck==0.9.1
+pydub==0.25.1
+PyGetWindow==0.0.9
+Pygments==2.17.2
+PyJWT==2.9.0
+pymongo==4.8.0
+PyMsgBox==1.0.9
+PyMuPDF==1.25.4
+pyogrio==0.10.0
+pyparsing==3.1.1
+PyPDF2==3.0.1
+pypdfium2==4.30.1
+pyperclip==1.9.0
+pypiwin32==223
+pyproj==3.7.0
+PyRect==0.2.0
+PyScreeze==1.0.1
+PySocks==1.7.1
+pytest==7.4.2
+pytest-asyncio==0.21.1
+python-dateutil==2.8.2
+python-docx==1.1.2
+python-dotenv==1.0.0
+python-json-logger==2.0.7
+python-multipart==0.0.6
+pyttsx3==2.98
+pytweening==1.2.0
+pytz==2023.3.post1
+pywhatkit==5.4
+pywin32==306
+pywinpty==2.0.12
+PyYAML==6.0.1
+pyzmq==25.1.2
+qdrant-client==1.11.1
+qtconsole==5.5.1
+QtPy==2.4.1
+quantulum3==0.9.2
+rank-bm25==0.2.2
+rasterio==1.4.3
+ray==2.39.0
+referencing==0.32.1
+regex==2024.9.11
+requests==2.32.3
+requests-cache==0.9.8
+requests-oauthlib==2.0.0
+requests-toolbelt==1.0.0
+retina-face==0.0.17
+retrying==1.3.4
+rfc3339-validator==0.1.4
+rfc3986-validator==0.1.1
+rich==13.7.1
+rpds-py==0.17.1
+rsa==4.9
+s3transfer==0.10.3
+safetensors==0.4.5
+scikit-learn==1.3.0
+scipy==1.12.0
+seaborn==0.13.1
+selenium==4.29.0
+Send2Trash==1.8.2
+sentence-transformers==3.1.0
+sentencepiece==0.2.0
+setuptools==76.1.0
+shapely==2.0.6
+shellingham==1.5.4
+simsimd==6.2.1
+six==1.16.0
+smart-open==7.0.4
+smmap==5.0.2
+sniffio==1.3.0
+sortedcontainers==2.4.0
+sounddevice==0.5.1
+soupsieve==2.5
+spacy==3.7.6
+spacy-legacy==3.0.12
+spacy-loggers==1.0.5
+SpeechRecognition==3.14.1
+SQLAlchemy==2.0.34
+srsly==2.4.8
+sse-starlette==2.1.3
+sseclient-py==1.8.0
+stack-data==0.6.3
+starlette==0.27.0
+statsmodels==0.14.2
+streamlit==1.43.2
+stringzilla==3.12.3
+sympy==1.13.1
+tbb==2021.12.0
+tenacity==9.1.2
+tensorboard==2.19.0
+tensorboard-data-server==0.7.2
+tensorboardX==2.6.2.2
+tensorflow==2.19.0
+termcolor==2.4.0
+terminado==0.18.0
+thinc==8.2.5
+threadpoolctl==3.3.0
+tiktoken==0.7.0
+tinycss2==1.2.1
+tokenizers==0.21.1
+toml==0.10.2
+toolz==0.12.1
+torch==2.5.1
+torchaudio==2.5.1
+torchvision==0.20.1
+tornado==6.4
+tqdm==4.67.1
+traitlets==5.14.1
+transformers==4.50.0
+trio==0.29.0
+trio-websocket==0.12.2
+twilio==9.2.4
+typeguard==4.3.0
+typer==0.12.5
+types-python-dateutil==2.8.19.20240106
+typing_extensions==4.12.2
+tzdata==2023.4
+uri-template==1.3.0
+uritemplate==4.1.1
+url-normalize==1.4.3
+urllib3==2.1.0
+uvicorn==0.23.2
+virtualenv==20.26.2
+wasabi==1.1.3
+watchdog==6.0.0
+wcwidth==0.2.13
+weasel==0.4.1
+webcolors==1.13
+webdriver-manager==4.0.2
+webencodings==0.5.1
+websocket-client==1.8.0
+Werkzeug==3.0.3
+wheel==0.45.1
+whisper==1.1.10
+widgetsnbextension==4.0.9
+wikipedia==1.4.0
+Wikipedia-API==0.8.1
+wordcloud==1.9.4
+wrapt==1.16.0
+wsproto==1.2.0
+xgboost==1.7.6
+xlrd==2.0.1
+xxhash==3.5.0
+xyzservices==2024.4.0
+yarl==1.9.4
+yt-dlp==2025.2.19
+zipp==3.21.0
+zstandard==0.23.0
